--- a/EmployeeSQL/salary_analysis.ipynb
+++ b/EmployeeSQL/salary_analysis.ipynb
@@ -1,19 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus section\n",
+    "\n",
+    "In this section we are trying to determine whether the dataset is fake. To complete this investigation we import the SQL database into Pandas and then create a histogram to visualise the most common salary ranges for employees. Then a bar chart is created to show the average salary by title.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set up and dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import psycopg2\n",
     "from login_info import username\n",
     "from login_info import password\n",
+    "from login_info import database\n",
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine(f\"postgresql+psycopg2://{username}:{password}@localhost:5432/homework_db\")\n",
+    "engine = create_engine(f\"postgresql+psycopg2://{username}:{password}@localhost:5432/{database}\")\n",
     "connection = engine.connect()"
    ]
   },
@@ -122,6 +133,7 @@
     }
    ],
    "source": [
+    "# Here we are loading in the employee table from SQL.\n",
     "employee_data = pd.read_sql(\"SELECT * FROM employees\", connection)\n",
     "employee_data.head()"
    ]
@@ -201,6 +213,7 @@
     }
    ],
    "source": [
+    "# Then we load in the salary table.\n",
     "salary_data = pd.read_sql(\"SELECT * FROM salaries\", connection)\n",
     "salary_data.head()"
    ]
@@ -323,6 +336,7 @@
     }
    ],
    "source": [
+    "# Now we merge both datasets together.\n",
     "combined_data = pd.merge(employee_data, salary_data, on=\"emp_no\")\n",
     "combined_data.head()"
    ]
@@ -333,6 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filling any null values with 0\n",
     "combined_data = combined_data.fillna(0)"
    ]
   },
@@ -353,6 +368,7 @@
     }
    ],
    "source": [
+    "# Confirming there are no null values in the dataset.\n",
     "combined_data.isnull().values.any()"
    ]
   },
@@ -373,6 +389,7 @@
     }
    ],
    "source": [
+    "# To establish bins for the salary ranges, we first need to establish what the lowest salary is.\n",
     "lowest_salary = combined_data[\"salary\"].min()\n",
     "lowest_salary"
    ]
@@ -394,6 +411,7 @@
     }
    ],
    "source": [
+    "# We then find the highest salary in the dataset.\n",
     "highest_salary = combined_data[\"salary\"].max()\n",
     "highest_salary"
    ]
@@ -522,17 +540,20 @@
     }
    ],
    "source": [
+    "# Next we create bins and bin labels for our data.\n",
     "bins = [0, 49999, 59999, 69999, 79999, 89999, 99999, 109999, 119999, 129999]\n",
     "group_labels = [\"<50000\", \"50000-59999\", \"60000-69999\", \"70000-79999\", \"80000-89999\", \"90000-99999\",\n",
     "               \"100000-109999\", \"110000-119999\", \"120000+\"]\n",
     "\n",
+    "\n",
+    "# Then we add a new colunm to the dataset called \"salary ranges\".\n",
     "combined_data[\"salary ranges\"] = pd.cut(combined_data[\"salary\"], bins, labels=group_labels)\n",
     "combined_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -648,12 +669,13 @@
        "174756   6/8/1985   40000        <50000  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Now we sort the data by salary so that the bins (salary ranges) appear in the correct order on the histogram.\n",
     "sorted_data = combined_data.sort_values(\"salary\")\n",
     "sorted_data.head()"
    ]
@@ -677,6 +699,7 @@
     }
    ],
    "source": [
+    "# Now we create a histogram of the salary ranges.\n",
     "plt.rcParams.update({'font.size': 12})\n",
     "plt.figure(figsize = (10,6))\n",
     "plt.hist(sorted_data[\"salary ranges\"], bins=9, color=\"mediumslateblue\")\n",
@@ -762,22 +785,24 @@
     }
    ],
    "source": [
+    "# Now we read in the titles table from SQL so we can create the bar graph based on job title.\n",
     "title_data = pd.read_sql(\"SELECT * FROM titles\", connection)\n",
     "title_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Here we rename the title_id column so that we can merge the 2 datasets on the same column.\n",
     "title_data = title_data.rename(columns={\"title_id\":\"emp_title_id\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -899,19 +924,20 @@
        "4   63016   60000-69999  Staff  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Now we merge the data.\n",
     "all_data = pd.merge(combined_data, title_data, on=\"emp_title_id\")\n",
     "all_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -990,12 +1016,13 @@
        "6    Technique Leader  48582.90"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Next we group the data by job title and then we calculate the average salary for each group.\n",
     "title_group = all_data.groupby([\"title\"])\n",
     "\n",
     "avg_salary = title_group[\"salary\"].mean().round(2)\n",
@@ -1004,8 +1031,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Clearly the dataset does not make sense - a Senior Engineer earns less than an Assistant Engineer.\n",
+    "\n",
+    "To prove this point visually, the final step is to create a bar graph."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1022,6 +1059,8 @@
     }
    ],
    "source": [
+    "# Lastly we produce a bar graph using Matplotlib.\n",
+    "\n",
     "title_list = avg_salary_data[\"title\"]\n",
     "\n",
     "y_axis = avg_salary_data[\"salary\"]\n",
@@ -1042,25 +1081,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Epilogue\n",
+    "\n",
+    "After completing the analysis, we have confirmed that the dataset is fake and we present the evidence to the boss.\n",
+    "The boss thanks you for your work. On your way out of the office, you hear the words, \"Search your ID number.\" You look down at your badge to see that your employee ID number is 499942."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>emp_title_id</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary ranges</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>287532</th>\n",
+       "      <td>499942</td>\n",
+       "      <td>e0004</td>\n",
+       "      <td>1/10/1963</td>\n",
+       "      <td>April</td>\n",
+       "      <td>Foolsday</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2/10/1997</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>&lt;50000</td>\n",
+       "      <td>Technique Leader</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        emp_no emp_title_id birth_date first_name last_name sex  hire_date  \\\n",
+       "287532  499942        e0004  1/10/1963      April  Foolsday   F  2/10/1997   \n",
+       "\n",
+       "        salary salary ranges             title  \n",
+       "287532   40000        <50000  Technique Leader  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Out of curiosity we search our employee number.\n",
+    "my_data = all_data.loc[all_data[\"emp_no\"] == 499942]\n",
+    "my_data"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## APRIL FOOLSDAY!"
+   ]
   }
  ],
  "metadata": {
